Fixing opera tag bug
For some reason hovering controls are getting messed up when
you scroll down the page, this fixes it on idle.

tracks internal commit 2b229a33d5d28072dfc0629c42daaa0ce0f747f1

--- a/plugins/Ajax/htdocs/images/tag-ui.css
+++ b/plugins/Ajax/htdocs/images/tag-ui.css
@@ -525,3 +525,9 @@ div.tag-display.ready.dirty  { /* !FIXING safari tag widget bug on idle. */
 border-top:1px solid transparnt !important;
 }
 
+
+
+
+/* trying to fix opera */
+div.tag-display ul, div.tag-display li {display: inline-block;}
+
